rendered/envs/demo/goldpinger/service-goldpinger.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    coroot.com/custom-application-name: goldpinger
  labels:
    app: goldpinger
  name: goldpinger
spec:
  ports:
    - name: http
      nodePort: 30080
      port: 8080
  selector:
    app: goldpinger
  type: NodePort
