rendered/envs/demo/goldpinger/ingressroute-goldpinger.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: goldpinger
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`goldi.demo.budd.ee`)
      priority: 10
      services:
        - name: goldpinger
          port: 8080
